--- a/Proyecto/src/Principal/VistaFactura.form
+++ b/Proyecto/src/Principal/VistaFactura.form
@@ -176,7 +176,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButton2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Abrir PDF"/>
+            <Property name="text" type="java.lang.String" value="Abrir Carpeta"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
